--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android_Demo_Kotlin</string>
+    <string name="title_activity_kotlin_basic">Kotlin_bASIC</string>
 </resources>
