--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,36 @@
     <string name="enter_name_toast">Enter Name</string>
     <string name="enter_email_toast">Enter Email</string>
     <string name="done">Done</string>
+    <string name="feedback_title">Enter feedback details to send\nto the developer:</string>
+    <string name="layouts_btn">Layouts</string>
+    <string name="btn_linearlayout">Linear Layout</string>
+    <string name="hint_your_name">Your Name</string>
+    <string name="hint_your_email">Your Email</string>
+    <string name="hint_feedback_details">Feedback Details...</string>
+    <string name="chck_txt_would_you_like_and_email_response">Would you like and email response?</string>
+    <string name="btn_txt_send_feedback">Send Feedback</string>
+    <string name="btn_relative_layout">Relative Layout</string>
+    <string name="btn_constraint_layout">constraint layout</string>
+    <string name="txt_frame_demo">Frame Demo</string>
+    <string name="button_is_under_merge_tag">Button is under merge tag</string>
+    <string name="txt_gridview_1">1</string>
+    <string name="txt_gridview_2">2</string>
+    <string name="txt_gridview_3">3</string>
+    <string name="txt_gridview_4">4</string>
+    <string name="txt_gridview_5">5</string>
+    <string name="txt_gridview_6">6</string>
+    <string name="btn_frame_layout">Frame Layout</string>
+    <string name="btn_grid_layout">Grid Layout</string>
+    <string name="txt_include_and_merge_tag">Include and Merge</string>
+    <string name="chain_button_1">1</string>
+    <string name="chain_button_2">2</string>
+    <string name="chain_button__3">3</string>
+    <string-array name="country">
+        <item>India</item>
+        <item>USA</item>
+        <item>China</item>
+        <item>Japan</item>
+        <item>Other</item>
+    </string-array>
+
 </resources>
