--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,11 @@
     <string name="chain_button_1">1</string>
     <string name="chain_button_2">2</string>
     <string name="chain_button__3">3</string>
+    <string name="listview">Listview</string>
+    <string name="recyclerview">Recyclerview</string>
+    <string name="listview_name">listview_name</string>
+    <string name="listview_address">listview_address</string>
+    <string name="recyclerview_grid">Recyclerview Grid</string>
     <string-array name="country">
         <item>India</item>
         <item>USA</item>
@@ -47,5 +52,18 @@
         <item>Japan</item>
         <item>Other</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="viewpager_one">ViewPager One</string>
+    <string name="view_pager_two_recyclerview">View Pager Two Recyclerview</string>
+    <string name="view_pager_two">View Pager Two</string>
+    <string name="name">name</string>
+    <string name="date">date</string>
+    <string name="api_level">api_level</string>
+    <string name="description_text">Description Text</string>
+    <string name="expandable_recyclerview">Expandable Recyclerview</string>
+    <string name="expandable_listview">Expandable Listview</string>
+    <string name="bottom_navigation">Bottom Navigation</string>
+    <string name="textview_guideline">TextView</string>
 
 </resources>
