--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,72 +1,99 @@
 <resources>
-    <string name="app_name">Android_Demo_Kotlin</string>
-    <string name="title_activity_kotlin_basic">Kotlin_bASIC</string>
-    <string name="ui_element">UI_Element</string>
-    <string name="go_to_kotlin_basic">Go to KOTLIN bASIC</string>
-    <string name="hint_name">Name</string>
-    <string name="hint_email_id">Email Id</string>
-    <string name="rb_name_male">Male</string>
-    <string name="rb_name_female">Female</string>
-    <string name="txtview_gender">Gender</string>
-    <string name="txt_hobbies">Hobbies</string>
-    <string name="txt_cricket">Cricket</string>
-    <string name="basket_ball">Basket Ball</string>
-    <string name="football">Football</string>
-    <string name="btn_submit">Submit</string>
-    <string name="enter_name_toast">Enter Name</string>
-    <string name="enter_email_toast">Enter Email</string>
-    <string name="done">Done</string>
-    <string name="feedback_title">Enter feedback details to send\nto the developer:</string>
-    <string name="layouts_btn">Layouts</string>
-    <string name="btn_linearlayout">Linear Layout</string>
-    <string name="hint_your_name">Your Name</string>
-    <string name="hint_your_email">Your Email</string>
-    <string name="hint_feedback_details">Feedback Details...</string>
-    <string name="chck_txt_would_you_like_and_email_response">Would you like and email response?</string>
-    <string name="btn_txt_send_feedback">Send Feedback</string>
-    <string name="btn_relative_layout">Relative Layout</string>
-    <string name="btn_constraint_layout">constraint layout</string>
-    <string name="txt_frame_demo">Frame Demo</string>
-    <string name="button_is_under_merge_tag">Button is under merge tag</string>
-    <string name="txt_gridview_1">1</string>
-    <string name="txt_gridview_2">2</string>
-    <string name="txt_gridview_3">3</string>
-    <string name="txt_gridview_4">4</string>
-    <string name="txt_gridview_5">5</string>
-    <string name="txt_gridview_6">6</string>
-    <string name="btn_frame_layout">Frame Layout</string>
-    <string name="btn_grid_layout">Grid Layout</string>
-    <string name="txt_include_and_merge_tag">Include and Merge</string>
-    <string name="chain_button_1">1</string>
-    <string name="chain_button_2">2</string>
-    <string name="chain_button__3">3</string>
-    <string name="listview">Listview</string>
-    <string name="recyclerview">Recyclerview</string>
-    <string name="listview_name">listview_name</string>
-    <string name="listview_address">listview_address</string>
-    <string name="recyclerview_grid">Recyclerview Grid</string>
-    <string-array name="country">
-        <item>India</item>
-        <item>USA</item>
-        <item>China</item>
-        <item>Japan</item>
-        <item>Other</item>
-    </string-array>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="viewpager_one">ViewPager One</string>
-    <string name="view_pager_two_recyclerview">View Pager Two Recyclerview</string>
-    <string name="view_pager_two">View Pager Two</string>
-    <string name="name">name</string>
-    <string name="date">date</string>
-    <string name="api_level">api_level</string>
-    <string name="description_text">Description Text</string>
-    <string name="expandable_recyclerview">Expandable Recyclerview</string>
-    <string name="expandable_listview">Expandable Listview</string>
-    <string name="bottom_navigation">Bottom Navigation</string>
-    <string name="textview_guideline">TextView</string>
-    <string name="recent">Recent</string>
-    <string name="tab1">Tab 1</string>
-    <string name="tab2">Tab 2</string>
+        <string name="app_name">Android_Demo_Kotlin</string>
+        <string name="title_activity_kotlin_basic">Kotlin_bASIC</string>
+        <string name="ui_element">UI_Element</string>
+        <string name="go_to_kotlin_basic">Go to KOTLIN bASIC</string>
+        <string name="hint_name">Name</string>
+        <string name="hint_email_id">Email Id</string>
+        <string name="rb_name_male">Male</string>
+        <string name="rb_name_female">Female</string>
+        <string name="txtview_gender">Gender</string>
+        <string name="txt_hobbies">Hobbies</string>
+        <string name="txt_cricket">Cricket</string>
+        <string name="basket_ball">Basket Ball</string>
+        <string name="football">Football</string>
+        <string name="btn_submit">Submit</string>
+        <string name="enter_name_toast">Enter Name</string>
+        <string name="enter_email_toast">Enter Email</string>
+        <string name="done">Done</string>
+        <string name="feedback_title">Enter feedback details to send\nto the developer:</string>
+        <string name="layouts_btn">Layouts</string>
+        <string name="btn_linearlayout">Linear Layout</string>
+        <string name="hint_your_name">Your Name</string>
+        <string name="hint_your_email">Your Email</string>
+        <string name="hint_feedback_details">Feedback Details...</string>
+        <string name="chck_txt_would_you_like_and_email_response">Would you like and email response?</string>
+        <string name="btn_txt_send_feedback">Send Feedback</string>
+        <string name="btn_relative_layout">Relative Layout</string>
+        <string name="btn_constraint_layout">constraint layout</string>
+        <string name="txt_frame_demo">Frame Demo</string>
+        <string name="button_is_under_merge_tag">Button is under merge tag</string>
+        <string name="txt_gridview_1">1</string>
+        <string name="txt_gridview_2">2</string>
+        <string name="txt_gridview_3">3</string>
+        <string name="txt_gridview_4">4</string>
+        <string name="txt_gridview_5">5</string>
+        <string name="txt_gridview_6">6</string>
+        <string name="btn_frame_layout">Frame Layout</string>
+        <string name="btn_grid_layout">Grid Layout</string>
+        <string name="txt_include_and_merge_tag">Include and Merge</string>
+        <string name="chain_button_1">1</string>
+        <string name="chain_button_2">2</string>
+        <string name="chain_button__3">3</string>
+        <string name="listview">Listview</string>
+        <string name="recyclerview">Recyclerview</string>
+        <string name="listview_name">listview_name</string>
+        <string name="listview_address">listview_address</string>
+        <string name="recyclerview_grid">Recyclerview Grid</string>
+        <string-array name="country">
+            <item>India</item>
+            <item>USA</item>
+            <item>China</item>
+            <item>Japan</item>
+            <item>Other</item>
+        </string-array>
+        <!-- TODO: Remove or change this placeholder text -->
+        <string name="hello_blank_fragment">Hello blank fragment</string>
+        <string name="viewpager_one">ViewPager One</string>
+        <string name="view_pager_two_recyclerview">View Pager Two Recyclerview</string>
+        <string name="view_pager_two">View Pager Two</string>
+        <string name="name">name</string>
+        <string name="date">date</string>
+        <string name="api_level">api_level</string>
+        <string name="description_text">Description Text</string>
+        <string name="expandable_recyclerview">Expandable Recyclerview</string>
+        <string name="expandable_listview">Expandable Listview</string>
+        <string name="bottom_navigation">Bottom Navigation</string>
+        <string name="textview_guideline">TextView</string>
+        <string name="fragments">Fragments</string>
+        <string name="favorite_fragment_btn_txt">Favorite Fragment</string>
+        <string name="recent_fragment_btn_txt">Recent Fragment</string>
+        <string name="txt_favorites_fragment">Favorites</string>
+        <string name="txt_recent_fragment">Recent</string>
+        <string name="intents">Intents</string>
+        <string name="implicit_intent">Implicit Intent</string>
+        <string name="enter_message_hint_fragment">Enter Message</string>
+        <string name="btn_send_message_txt">Send Message</string>
+        <string name="menu_gallery">Gallery</string>
+        <string name="menu_add_message">Add Message</string>
+        <string name="menu_view_message">View Message</string>
+        <string name="btn_txt_go_back_to_main_activity">Go Back to Main Activity</string>
+        <string name="fragment_txtview_choose_image">Choose Image</string>
+        <string name="pending_intent">Pending intent</string>
+        <string name="btn_txt_navigation_controller">Navigation Controller</string>
+        <string name="title_activity_pending">PendingActivity</string>
+        <!-- Strings used for fragments for navigation -->
+        <string name="first_fragment_label">First Fragment</string>
+        <string name="second_fragment_label">Second Fragment</string>
+        <string name="next">Next</string>
+        <string name="previous">Previous</string>
+
+        <string name="hello_first_fragment">Hello first fragment</string>
+        <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+        <string name="btn_txt_start_pending_intent">start Pending Intent</string>
+        <string name="tabone_string">Tab 1</string>
+        <string name="tabtwo_string">Tab Two</string>
+        <string name="mainactivity_tag">MainActivityLog</string>
+        <string name="fragment_count">FragmentCountLog</string>
 
 </resources>
