--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,5 +146,6 @@
     <string name="json_content_type">Content-Type</string>
     <string name="content_type_json">application/json</string>
     <string name="enter_job_toast">Enter Job Name</string>
+    <string name="btn_txt_mvp">MVP</string>
 
 </resources>
