--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,5 +148,14 @@
     <string name="enter_job_toast">Enter Job Name</string>
     <string name="btn_txt_mvp">MVP</string>
     <string name="btn_txt_mvc">MVC</string>
+    <string name="toast_permission_granted">Permission already granted.</string>
+    <string name="toast_request_permission">Please request permission.</string>
+    <string name="toast_permission_granted_location_data">Permission Granted, Now you can access location data.</string>
+    <string name="toast_permission_granted_camera">Permission Granted, Now you can access camera.</string>
+    <string name="open_settings">Open Settings</string>
+    <string name="grant_permission_settings">Grant Permission in settings</string>
+    <string name="btn_text_settings">Settings</string>
+    <string name="package_keyword">package</string>
+    <string name="btn_text_cancel">Cancel</string>
 
 </resources>
