--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,5 +157,6 @@
     <string name="btn_text_settings">Settings</string>
     <string name="package_keyword">package</string>
     <string name="btn_text_cancel">Cancel</string>
+    <string name="toast_granted">Granted</string>
 
 </resources>
